newtype-tools/tests/trybuild/struct-unit.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/trybuild/struct-unit.rs:2:1
  |
2 | struct Oranges;
  | ^^^^^^
